<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/totalScreenTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_daily_screen_time"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/averageScreenTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average_screen_time"
        android:textSize="18sp" />

    <Button
        android:id="@+id/blockButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/hourglass1"
        android:text="@string/block_screen_time" />
</LinearLayout>