<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hourglass1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="294dp"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/screen_smart"
        android:textColor="#A1887F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/mainscreenButton"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="124dp"
        android:text="@string/main_screen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="124dp"
        android:text="@string/exit"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/mainscreenButton"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="128dp"
        android:text="@string/student_name_sandile_april"
        android:textColor="#A1887F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="108dp"
        android:text="@string/student_number_st10441176"
        android:textColor="#A1887F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>